1. Navbar-Toggle buttons added, 2. Table made responsive

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   mail:
     host: smtp.gmail.com
     username: banticoke@gmail.com
-    password: xuedesmaniaiplto
+    password: <APP PASSWORD>
     port: 587
     properties:
       mail:
